# photojawn

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
photoalbum/: cli.py  config.py  generate.py
photoalbum/skel/: photoalbum.conf.yml
photoalbum/skel/_templates/: album.html  base.html  photo.html
photoalbum/skel/static/: index.css
photojawn/: cli.py  config.py  generate.py
photojawn/skel/: photojawn.conf.yml
photojawn/skel/_templates/: album.html  photo.html
photojawn/skel/static/: index.css
