[tool.poetry]
name = "photojawn"
version = "0.1.0"
description = "A simple photo album static site generator"
authors = ["Nick Pegg <nick@nickpegg.com>"]
repository = "https://github.com/nickpegg/photojawn"
readme = "README.md"
license = "MIT"

[tool.poetry.scripts]
photojawn = 'photojawn.cli:main'

[tool.poetry.dependencies]
# TODO: make sure we support >=3.10 via tests
python = "<4.0,>=3.11"
jinja2 = "^3.1.4"
pillow = "^10.4.0"
rich = "^13.7.1"
pyyaml = "^6.0.1"
markdown = "^3.6"

[tool.poetry.group.dev.dependencies]
pytest = "*"
ruff = "*"
mypy = "*"
pytest-testmon = "*"
types-pyyaml = "^6.0.12.20240724"
types-markdown = "^3.6.0.20240316"


[tool.mypy]
strict = true

# Allow untyped decorators. This is mostly for @pytest.fixture
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
# Various packages which don't have stubs available
module = [
]
ignore_missing_imports = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
